Bug 376046 - Missing icons in toolbar and payments panel on home page
Summary: Missing icons in toolbar and payments panel on home page
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-05 13:02 UTC by Ian Neal
Modified: 2017-07-01 11:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments
Toolbar (20.15 KB, image/png)
2017-02-05 17:33 UTC, Ian Neal
Details
Payments (43.67 KB, image/png)
2017-02-05 17:34 UTC, Ian Neal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Neal 2017-02-05 13:02:14 UTC
STR
1/ Compile from current master
2/ Start KMyMoney
3/ Configure home page to show payments panel
4/ Go to home page
5/ Look at toolbar and payments panel on home page

Expected results
1/ Icon rather than word "Transaction" in toolbar
2/ Icons showing next to scheduled items in payments panel

Actual results
1/ Word "Transaction" in toolbar
2/ Broken icon symbol next to scheduled items in payments panel
Comment 1 wojnilowicz 2017-02-05 15:07:48 UTC
Screenshot?
Comment 2 Ian Neal 2017-02-05 17:33:55 UTC
Created attachment 103848 [details]
Toolbar
Comment 3 Ian Neal 2017-02-05 17:34:10 UTC
Created attachment 103849 [details]
Payments
Comment 4 Ian Neal 2017-02-05 17:41:23 UTC
Selecting oxygen from Icons settings and restarting kmymoney does give all the relevant icons. Selecting system or Tango doesn't.
oxygen appears twice in the dropdown though.
Comment 5 wojnilowicz 2017-02-05 17:49:58 UTC
There is no icon in Tango for "Transaction" so you don't see right icon, but you should see "unknown" icon in such case. Could you search for "unknown" in your /usr/share/icons/Tango/ and report your results here?

Please list all entries in your dropdown.

What's your prefix during compilation?
Comment 6 Ian Neal 2017-02-05 18:35:20 UTC
I'd not checked if Tango icons were installed, they are now...
Now that Tango icons are installed (both the standard set and the extras), in the drop down I have:
system
oxygen
Tango
oxygen
Tango

My prefix for building is /usr/local
Comment 7 wojnilowicz 2017-02-09 18:59:02 UTC
(In reply to Ian Neal from comment #6)
> I'd not checked if Tango icons were installed, they are now...
> Now that Tango icons are installed (both the standard set and the extras),
> in the drop down I have:
> system
> oxygen
> Tango
> oxygen
> Tango
> 
> My prefix for building is /usr/local

After installing Tango icon theme, do you still don't see an icon in your toolbar?
Comment 8 wojnilowicz 2017-02-17 20:40:28 UTC
Git commit 3629183bf6ea42b59d566104bc6c63f2140e1b1d by Łukasz Wojniłowicz.
Committed on 17/02/2017 at 20:15.
Pushed by wojnilowicz into branch 'master'.

Add more fallback icons
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

M  +2    -1    kmymoney/dialogs/kimportdlg.cpp
M  +37   -9    kmymoney/kmymoney.cpp
M  +2    -2    kmymoney/kmymoneyui.rc
M  +4    -0    kmymoney/kmymoneyutils.cpp
M  +12   -9    kmymoney/views/khomeview.cpp
M  +8    -2    kmymoney/views/kreportsview.cpp

https://commits.kde.org/kmymoney/3629183bf6ea42b59d566104bc6c63f2140e1b1d