Add more fallback icons

BUG:376046
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>